--- a/estadios.html
+++ b/estadios.html
@@ -31,53 +31,55 @@
             </div>
         </nav>
     </header>
-    <section >
-        <div class="titulo__estadios">
-            <h2>Estadios para el Mundial QATAR 2022</h2>
-        </div>
-        <article class="seccion__estadios">
-            <div class="estadios">
-                <img class="estadios__imagen" src="imagenes/estadio1.jpg" alt="">
-                <h2 class="estadios__titulo">ESTADIO AL BAYT</h2>
-                <p class="estadios__texto">Este estadio posee una capacidad para 60.000 espectadores. El diseño del estadio conmemora el pasado y el presente de Qatar, y a la vez mira hacia el futuro de la comunidad. En cumplimiento de los objetivos de sostenibilidad de este Mundial, el recinto se convertirá en un modelo de desarrollo ecológico, rodeado de las instalaciones de la zona. Aquí se jugarán partidos de fase de grupos, octavos de final, cuartos y semifinal.</p>
+    <main>
+        <section >
+            <div class="titulo__estadios">
+                <h2>Estadios para el Mundial QATAR 2022</h2>
             </div>
-            <div class="estadios">
-                <img class="estadios__imagen" src="imagenes/estadio2.jpg" alt="">
-                <h2 class="estadios__titulo">ESTADIO AL THUMAMA</h2>
-                <p class="estadios__texto">Con su diseño basado en la forma del tocado árabe tradicional, el gahfiya, el estadio, situado a escasos 12 km al sur del centro de Doha, lleva el nombre de un árbol autóctono que crece en la zona. Después de la Copa Mundial de la FIFA 2022, el recinto reducirá su capacidad de 40.000 a 20.000 localidades, y albergará una clínica deportiva y un hotel.</p>
-            </div>
-            <div class="estadios">
-                <img class="estadios__imagen" src="imagenes/estadio3.jpeg" alt="">
-                <h2 class="estadios__titulo">ESTADIO 974</h2>
-                <p class="estadios__texto">Para la construcción del Estadio 974, primeramente llamado Ras Abu Aboud, se utilizaron contendedores de transporte, asientos desmontables y otros bloques modulares. El estadio se desarmará completamente una vez concluido el Mundial, y sus diferentes partes se reutilizarán en otros proyectos. Aquí se disputarán partidos de fase de grupos y los octavos de final.</p>
-            </div>
-            <div class="estadios">
-                <img class="estadios__imagen" src="imagenes/estadio4.jpeg" alt="">
-                <h2 class="estadios__titulo">ESTADIO LUSAIL</h2>
-                <p class="estadios__texto">El Estadio Lusail será el mayor estadio de la primera Copa Mundial de la FIFA celebrada en el Golfo y el eje central de una nueva localidad llamada Ciudad Lusail. Como parte del legado de la competición, la infraestructura del estadio se transformará una vez concluida la fase final mundialista en un espacio para la comunidad, con escuelas, tiendas, cafeterías, instalaciones deportivas y clínicas de salud. La capacidad es de 80 mil espectadores y aquí se jugará la final.</p>
-            </div>
-            <div class="estadios">
-                <img class="estadios__imagen" src="imagenes/estadio5.jpg" alt="">
-                <h2 class="estadios__titulo">iESTADIO CIUDAD DE LA EDUCACIÓN</h2>
-                <p class="estadios__texto">El Estadio de la Ciudad de la Educación de Doha contará con capacidad para 45.350 espectadores durante la Copa Mundial. A sus alrededores habrá grandes espacios verdes y servicios de vanguardia. Se jugarán en él partidos de fase de grupos, octavos de final y cuartos.</p>
-            </div>
-            <div class="estadios">
-                <img class="estadios__imagen" src="imagenes/estadio6.jpg" alt="">
-                <h2 class="estadios__titulo">ESTADIO INTERNACIONAL KHALIFA</h2>
-                <p class="estadios__texto">El Estadio Internacional Khalifa de Al Rayyan es el recinto futbolístico más histórico de Qatar. Fue sede de los Juegos Asiáticos, la Copa del Golfo y la Copa Asiática de la AFC.  Tiene capacidad para 45,416 espectadores y se jugarán partidos de fase de grupos, octavos de final y la disputa por el tercer puesto.</p>
-            </div>
-            <div class="estadios">
-                <img class="estadios__imagen" src="imagenes/estadio7.jpg" alt="">
-                <h2 class="estadios__titulo">ESTADIO AL JANOUB</h2>
-                <p class="estadios__texto">El estadio Al Janoub se inauguró en la final de la Copa del Emir de 2019. El estadio se encuentra en la localidad costera de Al Wakrah, situada al sur de la capital del país, Doha. Tiene capacidad para 40 mil personas y se jugarán partidos de la fase de grupos y de octavos de final.</p>
-            </div>
-            <div class="estadios">
-                <img class="estadios__imagen" src="imagenes/estadio8.jpg" alt="">
-                <h2 class="estadios__titulo">ESTADIO ÁHMAD BIN ALI</h2>
-                <p class="estadios__texto">Este estadio posee un aforo para 44.740 espectadores. Se inauguró en 2020 y es la nueva sede del Al Rayyan Sports Club. Aquí se jugarán partidos de fase de grupo y uno de los octavos de final.</p>
-            </div>
-        </article>
-    </section>
+            <article class="seccion__estadios">
+                <div class="estadios">
+                    <img class="estadios__imagen" src="imagenes/estadio1.jpg" alt="">
+                    <h2 class="estadios__titulo">ESTADIO AL BAYT</h2>
+                    <p class="estadios__texto">Este estadio posee una capacidad para 60.000 espectadores. El diseño del estadio conmemora el pasado y el presente de Qatar, y a la vez mira hacia el futuro de la comunidad. En cumplimiento de los objetivos de sostenibilidad de este Mundial, el recinto se convertirá en un modelo de desarrollo ecológico, rodeado de las instalaciones de la zona. Aquí se jugarán partidos de fase de grupos, octavos de final, cuartos y semifinal.</p>
+                </div>
+                <div class="estadios">
+                    <img class="estadios__imagen" src="imagenes/estadio2.jpg" alt="">
+                    <h2 class="estadios__titulo">ESTADIO AL THUMAMA</h2>
+                    <p class="estadios__texto">Con su diseño basado en la forma del tocado árabe tradicional, el gahfiya, el estadio, situado a escasos 12 km al sur del centro de Doha, lleva el nombre de un árbol autóctono que crece en la zona. Después de la Copa Mundial de la FIFA 2022, el recinto reducirá su capacidad de 40.000 a 20.000 localidades, y albergará una clínica deportiva y un hotel.</p>
+                </div>
+                <div class="estadios">
+                    <img class="estadios__imagen" src="imagenes/estadio3.jpeg" alt="">
+                    <h2 class="estadios__titulo">ESTADIO 974</h2>
+                    <p class="estadios__texto">Para la construcción del Estadio 974, primeramente llamado Ras Abu Aboud, se utilizaron contendedores de transporte, asientos desmontables y otros bloques modulares. El estadio se desarmará completamente una vez concluido el Mundial, y sus diferentes partes se reutilizarán en otros proyectos. Aquí se disputarán partidos de fase de grupos y los octavos de final.</p>
+                </div>
+                <div class="estadios">
+                    <img class="estadios__imagen" src="imagenes/estadio4.jpeg" alt="">
+                    <h2 class="estadios__titulo">ESTADIO LUSAIL</h2>
+                    <p class="estadios__texto">El Estadio Lusail será el mayor estadio de la primera Copa Mundial de la FIFA celebrada en el Golfo y el eje central de una nueva localidad llamada Ciudad Lusail. Como parte del legado de la competición, la infraestructura del estadio se transformará una vez concluida la fase final mundialista en un espacio para la comunidad, con escuelas, tiendas, cafeterías, instalaciones deportivas y clínicas de salud. La capacidad es de 80 mil espectadores y aquí se jugará la final.</p>
+                </div>
+                <div class="estadios">
+                    <img class="estadios__imagen" src="imagenes/estadio5.jpg" alt="">
+                    <h2 class="estadios__titulo">iESTADIO CIUDAD DE LA EDUCACIÓN</h2>
+                    <p class="estadios__texto">El Estadio de la Ciudad de la Educación de Doha contará con capacidad para 45.350 espectadores durante la Copa Mundial. A sus alrededores habrá grandes espacios verdes y servicios de vanguardia. Se jugarán en él partidos de fase de grupos, octavos de final y cuartos.</p>
+                </div>
+                <div class="estadios">
+                    <img class="estadios__imagen" src="imagenes/estadio6.jpg" alt="">
+                    <h2 class="estadios__titulo">ESTADIO INTERNACIONAL KHALIFA</h2>
+                    <p class="estadios__texto">El Estadio Internacional Khalifa de Al Rayyan es el recinto futbolístico más histórico de Qatar. Fue sede de los Juegos Asiáticos, la Copa del Golfo y la Copa Asiática de la AFC.  Tiene capacidad para 45,416 espectadores y se jugarán partidos de fase de grupos, octavos de final y la disputa por el tercer puesto.</p>
+                </div>
+                <div class="estadios">
+                    <img class="estadios__imagen" src="imagenes/estadio7.jpg" alt="">
+                    <h2 class="estadios__titulo">ESTADIO AL JANOUB</h2>
+                    <p class="estadios__texto">El estadio Al Janoub se inauguró en la final de la Copa del Emir de 2019. El estadio se encuentra en la localidad costera de Al Wakrah, situada al sur de la capital del país, Doha. Tiene capacidad para 40 mil personas y se jugarán partidos de la fase de grupos y de octavos de final.</p>
+                </div>
+                <div class="estadios">
+                    <img class="estadios__imagen" src="imagenes/estadio8.jpg" alt="">
+                    <h2 class="estadios__titulo">ESTADIO ÁHMAD BIN ALI</h2>
+                    <p class="estadios__texto">Este estadio posee un aforo para 44.740 espectadores. Se inauguró en 2020 y es la nueva sede del Al Rayyan Sports Club. Aquí se jugarán partidos de fase de grupo y uno de los octavos de final.</p>
+                </div>
+            </article>
+        </section>
+    </main>
     <footer>
         <div>
             <img class="footer__imagen" src="imagenes/afa.png">
