--- a/index.html
+++ b/index.html
@@ -30,27 +30,31 @@
             </div>
         </nav>
     </header>
-    <article class="articulo">
-        <div class="articulo__titulo">
-            <h1 class="titulo">Argentina en QATAR 2022</h1>
-        </div>
-        <div class="articulo__equipo">
-            <p class="articulo__texto">
-                Mundial Qatar 2022: días y horarios de la selección argentina en la Copa del Mundo
-                El equipo nacional compartirá el Grupo C junto a Polonia, México y Arabia Saudita; cuándo se disputará cada enfrentamiento y qué horarios hay que ir agendando, a cuatro meses del inicio
-            </p>
-            <img class="articulo__imagen" src="imagenes/equipo.jpg" alt="">
-            <p class="articulo__texto">
-                La selección argentina debutará en la Copa del Mundo el 22 de noviembre, desde las 07.00 (hora argentina) frente a Arabia Saudita
-                <br>La Argentina ocupa el tercer lugar en el ranking FIFA. En cuanto a sus rivales en la primera etapa, México aparece 12° (11° entre los clasificados por la ausencia de Italia), Polonia 26° (23° entre los clasificados) y Arabia Saudita 53° (penúltimo entre los clasificados, ya que solo ocupa una mejor posición que Ghana).
-            </p>
-        </div>
-    </article>
-    <div class="linea"></div>
-    <article>
+    <main>
+        <section>
+            <article class="articulo">
+                <div class="articulo__titulo">
+                    <h1 class="titulo">Argentina en QATAR 2022</h1>
+                </div>
+                <div class="articulo__equipo">
+                    <p class="articulo__texto">
+                        Mundial Qatar 2022: días y horarios de la selección argentina en la Copa del Mundo
+                        El equipo nacional compartirá el Grupo C junto a Polonia, México y Arabia Saudita; cuándo se disputará cada enfrentamiento y qué horarios hay que ir agendando, a cuatro meses del inicio
+                    </p>
+                    <img class="articulo__imagen" src="imagenes/equipo.jpg" alt="">
+                    <p class="articulo__texto">
+                        La selección argentina debutará en la Copa del Mundo el 22 de noviembre, desde las 07.00 (hora argentina) frente a Arabia Saudita
+                        <br>La Argentina ocupa el tercer lugar en el ranking FIFA. En cuanto a sus rivales en la primera etapa, México aparece 12° (11° entre los clasificados por la ausencia de Italia), Polonia 26° (23° entre los clasificados) y Arabia Saudita 53° (penúltimo entre los clasificados, ya que solo ocupa una mejor posición que Ghana).
+                    </p>
+                </div>
+            </article>
+            
+            <article>
 
 
-    </article>
+            </article>
+        </section>
+    </main>
     <footer>
         <div>
             <img class="footer__imagen" src="imagenes/afa.png">
