--- a/indumentaria.html
+++ b/indumentaria.html
@@ -30,40 +30,40 @@
             </div>
         </nav>
     </header>
-
-    <section>
-        <div class="titulo__ropa">
-            <h2>Indumentaria del Seleccionado Argentino para QATAR 2022</h2>
-        </div>
-        <article class="seccion__indumentaria">
-            <div class="indumentaria">
-                <img class="indumentaria__imagen" src="imagenes/download.jpg" alt="">
-                <h2 class="indumentaria__titulo">Camiseta Titular Argentina 2022</h2>
+    <main>
+        <section>
+            <div class="titulo__ropa">
+                <h2>Indumentaria del Seleccionado Argentino para QATAR 2022</h2>
             </div>
-            <div class="indumentaria">
-                <img class="indumentaria__imagen julian" src="imagenes/julianremera.jpg" alt="">
-                <h2 class="indumentaria__titulo">Camiseta Titular Argentina 2022</h2>
-            </div>
-            <div class="indumentaria">
-                <img class="indumentaria__imagen" src="imagenes/diburemera.jpg" alt="">
-                <h2 class="indumentaria__titulo">Camiseta Titular Argentina 2022</h2>
-            </div>
-            <div class="indumentaria">
-                <img class="indumentaria__imagen" src="imagenes/messiremera.jpg" alt="">
-                <h2 class="indumentaria__titulo">Camiseta Titular Argentina 2022</h2>
-            </div>
-            <div class="indumentaria">
-                <img class="indumentaria__imagen" src="imagenes/argremera.jpg" alt="">
-                <h2 class="indumentaria__titulo">Camiseta Alternativa Argentina 2022</h2>
-            </div>
-            <div class="indumentaria">
-                <img class="indumentaria__imagen" src="imagenes/remeres.jpg" alt="">
-                <h2 class="indumentaria__titulo">Camiseta Alternativa Argentina 2022</h2>
-            </div>
-            
-        </article>
-    </section>
-
+            <article class="seccion__indumentaria">
+                <div class="indumentaria">
+                    <img class="indumentaria__imagen" src="imagenes/download.jpg" alt="">
+                    <h2 class="indumentaria__titulo">Camiseta Titular Argentina 2022</h2>
+                </div>
+                <div class="indumentaria">
+                    <img class="indumentaria__imagen" src="imagenes/diburemera.jpg" alt="">
+                    <h2 class="indumentaria__titulo">Camiseta Titular Argentina 2022</h2>
+                </div>
+                <div class="indumentaria">
+                    <img class="indumentaria__imagen" src="imagenes/remeres.jpg" alt="">
+                    <h2 class="indumentaria__titulo">Camiseta Alternativa Argentina 2022</h2>
+                </div>
+                <div class="indumentaria">
+                    <img class="indumentaria__imagen" src="imagenes/messiremera.jpg" alt="">
+                    <h2 class="indumentaria__titulo">Camiseta Titular Argentina 2022</h2>
+                </div>
+                <div class="indumentaria fotolarga1">
+                    <img class="indumentaria__imagen" src="imagenes/argremera.jpg" alt="">
+                    <h2 class="indumentaria__titulo">Camiseta Alternativa Argentina 2022</h2>
+                </div>
+                <div class="indumentaria fotolarga1">
+                    <img class="indumentaria__imagen" src="imagenes/julianremera.jpg" alt="">
+                    <h2 class="indumentaria__titulo">Camiseta Titular Argentina 2022</h2>
+                </div>
+                
+            </article>
+        </section>
+    </main>
     <footer>
         <div>
             <img class="footer__imagen" src="imagenes/afa.png">
